<resources>
    <string name="app_name">HeimdallClientAndroid</string>
    <string name="go">Go</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="frequency_in_mhz">Frequency in MHz</string>
    <string name="status">Idle</string>
    <string name="_2409">2409</string>
    <string name="mhz">MHz</string>
    <string name="initialize">Initialize</string>
</resources>